# gru-demo

./: .gitignore  Cargo.toml  README.txt  TODO.txt
export/android/: opengl.apk
export/web/: opengl.js  opengl_bg.wasm
gru-opengl-demo/: Cargo.toml  build_android.cmd  build_desktop.cmd  build_web.cmd
gru-opengl-demo/export/: index.html  opengl.js  opengl_bg.wasm
gru-opengl-demo/export/android/: opengl.apk
gru-opengl-demo/export/data/: CACHE.gru  STORAGE.gru
gru-opengl-demo/export/data/models/: cube.blend  cube.blend1  cube.gltf
gru-opengl-demo/export/data/shaders/: cube.frag  cube.vert
gru-opengl-demo/export/web/: opengl.js  opengl_bg.wasm
gru-opengl-demo/src/: app.rs  lib.rs  main.rs
gru-opengl-demo/src/glsl/: cube.frag  text.frag
gru-opengl-demo/src/prog/: cube.rs  mod.rs  resources.rs  slice.rs  sound.rs  text.rs
gru-opengl-demo/src/res/glsl/: text.vert
gru-script-demo/: Cargo.toml
gru-script-demo/res/: demo.not
gru-script-demo/src/: main.rs
gru-steam-demo/: Cargo.toml
gru-steam-demo/src/: data.rs  game.rs  lobby.rs  main.rs  net.rs  steam_utils.rs  ui_utils.rs
gru-vulkan-demo/: Cargo.toml
gru-vulkan-demo/res/glsl/: bg.frag  bg.vert  cave.frag  cave.vert  flash.frag  flash.vert  light.glsl  text.frag  text.glsl  text.vert
gru-vulkan-demo/src/: camera.rs  cave.rs  consts.rs  flash.rs  main.rs  mold.rs
gru-vulkan-demo/src/glsl/: shader.frag  shader.vert
gru-vulkan-demo/src/marching_cubes/: mod.rs
gru-vulkan-demo/src/mesh/: mod.rs
gru-vulkan-demo/stuff/: noise.txt
gru-wgpu-demo/: Cargo.toml  build.rs  scr_build.cmd  scr_build_web.cmd  scr_run.cmd  scr_run_web.cmd
gru-wgpu-demo/export/: gru_wgpu_demo.js  gru_wgpu_demo_bg.wasm  index.html
gru-wgpu-demo/export/data/warrior/: warrior.gltf
gru-wgpu-demo/src/: lib.rs  main.rs
gru-wgpu-demo/src/root/: camera.rs  demo_ui.rs  light.rs  mod.rs  render.rs  warrior.rs
gru-wgpu-demo/src/wgsl/: warrior.wgsl
opengl/: Cargo.toml  build_android.cmd  build_desktop.cmd  build_web.cmd
opengl/export/web/: index.html
opengl/src/: lib.rs  main.rs
vulkan/src/glsl/: cam.glsl  post.frag  shader.vert
