[package]
name = "gru-opengl-demo"
version = "0.1.0"
authors = ["Jannik Fehre"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "desktop"
path = "src/main.rs"

[dependencies]
gru-opengl = { path = "../../gru-opengl", features = ["fs", "ui", "resource"] }
gru-misc = { path = "../../gru-misc", features = ["math"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = { version = "0.15.0", default-features = false, features = ["vorbis"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.80"
rodio = { version = "0.15.0", default-features = false, features = ["vorbis", "wasm-bindgen"] }
