[package]
name = "gru-opengl-demo"
version = "0.1.0"
authors = ["Jannik Fehre", "Fabian Osyguß"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "desktop"
path = "src/main.rs"

[dependencies]
gru-opengl = { path = "../../gru-opengl", features = ["loading", "storage", "ui", "resource"] }
gru-misc = { path = "../../gru-misc", features = ["math"] }
gru-ui = { path = "../../gru-ui" }
getrandom  = { version = "0.2.10", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = { version = "0.17.1", default-features = false, features = ["vorbis"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.86"
rodio = { version = "0.17.1", default-features = false, features = ["vorbis", "wasm-bindgen"] }
