[package]
name = "gru-steam-demo"
version = "0.1.0"
authors = ["Jannik Fehre", "Fabian Osyguß"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
steamworks = { version = "0.10.0", features = ["raw-bindings"] }
gru-opengl = { path = "../../gru-opengl", features = ["ui"] }
gru-ui = { path = "../../gru-ui" }
serde = { version = "1.0.195", features = ["derive", "std"] }
bincode = "1.3.3"
