[package]
name = "gru-wgpu-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "desktop"
path = "src/main.rs"

[dependencies]
log = { version = "0.4.22", features = ["max_level_info", "release_max_level_info"] }
gru-wgpu = { path = "../../gru-wgpu", features = ["all"] }
gru-misc = { path = "../../gru-misc", features = ["math", "futures", "color", "png", "gltf", "file_tree"] }
ahash = { version = "0.8.11", default-features = false, features = ["no-rng", "std"] }

[build-dependencies]
naga = { version = "23.0.0", features = ["wgsl-in"] }
